<resources>
    <string name="app_name" translatable="false">Haren Karen</string>
    <string name="formato_dia" translatable="false">yyyy-MM-dd</string>
    <string name="formato_fecha" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="varias_desarrollador">Desarrollador</string>
    <string name="varias_cancelar">Cancelar</string>
    <string name="varias_volver">Volver</string>
    <string name="varias_seleccione">Seleccione...</string>
    <string name="varias_confirmar">Confirmar</string>
    <string name="varias_gps" translatable="false">GPS</string>
    <string name="varias_lat">Latitud</string>
    <string name="varias_lon">Longitud</string>
    <string name="varias_area">Sector recorrido</string>
    <string name="varias_rangofecha">Fechas</string>
    <string name="mnu_importar">Importar</string>
    <string name="mnu_exportar">Exportar</string>
    <string name="mnu_acercade">Acerca de</string>
    <string name="mnu_filtrar">Filtrar</string>
    <string name="mnu_fecha">Filtrar por fecha</string>
    <string name="mnu_limpiar">Limpiar filtro</string>
    <string name="abo_acercade">
        <![CDATA[
        <b><u>Acerca de esta app</u></b> <br/><br/>
        Habitualmente los trabajos en campo implican el uso de papel y lápiz porque es lo más portable por mucho. Esta app pretende (con exagerado optimismo) ser un digno reemplazo de aquello.<br/><br/>
        En este sentido la navegabilidad de pantallas busca guiar al censista en la definición de los datos, desde lo general a lo particular.
        Asi el usuario primeramente dará de alta una <b>Fecha</b>, dentro de este definirá <b>Recorridos</b> (como descriptor de áreas geográficas donde sucede el censo) y finalmente agregará tantos <b>Registros</b> como unidades sociales observe en el campo.<br/><br/>
        Esta primer actividad constituye lo que puede llamarse <b>dato primario</b>, ya que a partir de él explotarán una serie de modestos pero contundentes instrumentos de interpretacion de datos.<br/><br/>
        A nosotros el juego, y a triunfar.<br/><br/>
        ]]>
    </string>
    <string name="abo_legalTit">
        <![CDATA[<b><u>Advertencia Legal</u></b><br/><br/>]]>
    </string>
    <string name="abo_legalMsj">
        <![CDATA[
        es una aplicacion desarrollada en el marco del proyecto “Variación temporal y espacial de la colonia de elefantes marinos del sur de Península Valdés”,
        para facilitar la recolección y manipulación de datos científicos relacionados con la observación de elefantes marinos en su ecosistema natural.<br/><br/>
        Los datos generados y manipulados a través de esta aplicación son propiedad del Centro Nacional Patagónico (CENPAT) atraves del Grupo de Estudios de Macroecología Marina (GEMMA).<br/>
        El uso de estos datos está permitido exclusivamente con fines científicos y debe citar adecuadamente al CENPAT y al grupo GEMMA como las fuentes originales.<br/><br/>

        Al utilizar esta aplicación, usted reconoce y acepta que:<br/>
        <b>1)</b> Está manipulando y generando datos científicos que son propiedad del CENPAT<br/>
        <b>2)</b> Debe citar correctamente al CENPAT y GEMMA para cualquier uso o publicación de estos datos<br/>
        <b>3)</b> El uso indebido de estos datos, asi como propagarlos sin las autorizacion pertinentes estará sujeto a sanciones conforme la Ley de Protección de Datos Personales (Ley N° 25.326) y Ley de Acceso a la Información Pública (Ley N° 27.275) vigentes en la Republica Argentina<br/>
        <b>4)</b> Los datos están sujetos a una licencia de uso abierta con atribución (Creative Commons Attribution 4.0 International License - CC BY 4.0).
        Esto significa que los datos pueden ser compartidos siempre y cuando se otorgue el crédito adecuado a los creadores, y se obtenga de estos su autorizacion<br/><br/>

        Copyright © 2024 Centro Nacional Patagónico (CENPAT). Todos los derechos reservados.<br/>

        El aviso de copyright anterior y este aviso de permiso se incluirán en todas las copias o partes sustanciales del Software.<br/><br/>

        EL SOFTWARE SE PROPORCIONA "TAL CUAL", SIN GARANTÍA DE NINGÚN TIPO, EXPRESA O IMPLÍCITA, INCLUYENDO, ENTRE OTRAS, LAS GARANTÍAS DE COMERCIABILIDAD, ADECUACIÓN PARA UN PROPÓSITO PARTICULAR Y NO INFRACCIÓN.<br/>
        EN NINGÚN CASO LOS AUTORES O TITULARES DE LOS DERECHOS DE AUTOR SERÁN RESPONSABLES DE NINGUNA RECLAMACIÓN, DAÑO U OTRA RESPONSABILIDAD, YA SEA EN UNA ACCIÓN CONTRACTUAL, AGRAVIO O DE OTRO MODO, QUE SURJA DE, A PARTE DE, O EN CONEXIÓN CON EL SOFTWARE O EL USO, U OTRAS OPERACIONES EN EL SOFTWARE.<br/>
        ]]>
    </string>
    <string name="cen_anios">Años guardados en este dispositivo</string>
    <string name="ctx_haren">Haren(H)</string>
    <string name="ctx_harenSAlfa">Haren s/alfa(HsA)</string>
    <string name="ctx_gpoHarenes">Grupo de harenes(GH)</string>
    <string name="ctx_pjaSolitaria">Pareja solitaria(PS)</string>
    <string name="ctx_indivSolo">Individuos solos(S)</string>
    <string name="dev_poblar">Poblar BD</string>
    <string name="dev_recorr">Recorridos</string>
    <string name="dev_unsoc">Unid.Sociales</string>
    <string name="dev_usr">Alta usr</string>
    <string name="dev_logcat">Loggato</string>
    <string name="dev_limpdias">Limp.fechas</string>
    <string name="dev_limprecorr">Limpiar\nrecorr.</string>
    <string name="dev_limpLog">Limpiar\nlog</string>
    <string name="dev_rearmar">Rearmar\nesquema</string>
    <string name="exp_mensajeCompartir">Extraer todos los registros, y compartir fuera de la app</string>
    <string name="exp_compartir">Compartir</string>
    <string name="exp_compartirConUnPar">Entregar los registros realizados con este dispositivo. \nEsta app funcionara como terminal</string>
    <string name="exp_compartirParMedio">Eliga medio para comunicarse</string>
    <string name="exp_bluetooth" translatable="false">bluetooth</string>
    <string name="exp_wifi" translatable="false">wifi</string>
    <string name="exp_destinatario">Destinatarios</string>
    <string name="home_censos">Censos</string>
    <string name="home_mapa">Mapa recorridos</string>
    <string name="home_reportes">Reportes</string>
    <string name="home_ayuda">Ayuda</string>
    <string name="imp_mensajeCargar">Agregar registros desde csv</string>
    <string name="imp_cargar">Cargar archivo</string>
    <string name="imp_compartirConUnPar">Pedir los registros realizados en otro dispositivo. \nEsta app funcionará como concentrador</string>
    <string name="imp_misdatos">Mis datos para conexion</string>
    <string name="ini_bienvenido">Bienvenido</string>
    <string name="ini_ingresar">Ingresar</string>
    <string name="ini_nuevo">Soy nuev@</string>
    <string name="log_email">Ingrese email</string>
    <string name="log_contrasenia">Ingrese contraseña</string>
    <string name="log_huella">Usar huella</string>
    <string name="log_fallalog">Usuario y/o contraseña incorrecta</string>
    <string name="log_in">Ingresar</string>
    <string name="osm_mapacalor">Mapa calor</string>
    <string name="osm_menu">Categ.</string>
    <string name="pto_alto">Alto</string>
    <string name="pto_bajo">Bajo</string>
    <string name="rec_observador">Observador</string>
    <string name="rec_meteo">Cond. climaticas</string>
    <string name="rec_marea">Estado de la marea</string>
    <string name="rec_observaciones">Observaciones</string>
    <string name="rec_editar">Editar</string>
    <string name="rec_horaini">Hora inicio</string>
    <string name="rec_gpsini">GPS inicio</string>
    <string name="rec_horafin">Hora fin</string>
    <string name="rec_gpsfin">GPS fin</string>
    <string name="rec_registros">Registros</string>
    <string name="reg_nombre">Nombre</string>
    <string name="reg_apellido">Apellido</string>
    <string name="reg_email">Email</string>
    <string name="reg_contrasenia">Contraseña</string>
    <string name="reg_repcontrasenia">Repita Contraseña</string>
    <string name="reg_nocoincide">Las contraseñas no coinciden</string>
    <string name="reg_registrar">Registrar</string>
    <string name="rep_subtit">Relevamiento poblacional de\nelefante marino del sur</string>
    <string name="rep_observadores">Numero total de participantes:</string>
    <string name="rep_contCateg" formatted="true">Total (categoria %1$s)</string>
    <string name="rep_fijar">Fijar cuadro</string>
    <string name="rep_resUnSoc">Resumen de unidades sociales</string>
    <string name="rep_resIndiv">Resumen individuos</string>
    <string name="rep_tabUnSoc">Unidades\nsociales</string>
    <string name="rep_tabTotal">Numero total</string>
    <string name="rep_tabPromH">Promedio de \nhembras por\nunidad social</string>
    <string name="rep_tabHaren">Haren</string>
    <string name="rep_tabGpoHaren">Grupo de\nharenes</string>
    <string name="rep_tabHarenSin">Haren\nsin alfa</string>
    <string name="rep_tabPjaSolit">Pareja\nsolitaria</string>
    <string name="rep_tabIndivSolo">Individuos\nsolos</string>
    <string name="tpo_arena">Arena(A)</string>
    <string name="tpo_cRodado">Canto rodado(CR)</string>
    <string name="tpo_mezcla">Mezcla(M)</string>
    <string name="tpo_restinga">Restinga(R)</string>
    <string name="socg_ptoObs">Punto observ.:</string>
    <string name="socg_ctxSoc">Contexto soc.(Ref):</string>
    <string name="socg_tpoSust">Sustrato(Pya):</string>
    <string name="socg_comentario">Comentario:</string>
    <string name="socg_opcional">Opcional</string>
    <string name="socm_dominante">Dominante (\u03B1)</string>
    <string name="socm_s4_ad">S4/Ad</string>
    <string name="socm_sams">Sams</string>
    <string name="socm_hembras">Hembra Ad</string>
    <string name="socm_crias">Crias</string>
    <string name="socm_destetado">Destetado</string>
    <string name="socm_juvenil">Juvenil</string>
    <string name="socm_periferico"><![CDATA[Perif.(<10m)]]></string>
    <string name="socm_cercano">Cerca(10-50m)</string>
    <string name="socm_lejos">Lejos(50-100m)</string>
    <string name="mar_muybaja">Muy baja</string>
    <string name="mar_baja">Baja</string>
    <string name="mar_bajabaj">Baja, bajando</string>
    <string name="mar_bajasub">Baja, subiendo</string>
    <string name="mar_mediabaj">Media, bajando</string>
    <string name="mar_media">Media</string>
    <string name="mar_mediasub">Media, subiendo</string>
    <string name="mar_altabaj">Alta, bajando</string>
    <string name="mar_altasub">Alta, subiendo</string>
    <string name="mar_alta">Alta</string>
    <string name="mar_muyalta">Muy alta</string>
    <string name="varias_gpsHab">GPS deshabilitado. Habilítar en Configuraciones</string>
    <string name="varias_geopos">Geoposicionando...</string>
    <string name="varias_validarGPS">Tomar geoposicion</string>
    <string name="hom_onViewUsuario">Bienvenido</string>
    <string name="hom_onViewHuella">Bienvenido, señor/ra huella digital</string>
    <string name="hom_fecha_desde">Desde fecha</string>
    <string name="hom_fecha_hasta">Hasta fecha</string>
    <string name="dev_E_estadoDB">El gestor de BD no puede verificar la integridad de los datos</string>
    <string name="dev_estadoDB_entidad">entidades</string>
    <string name="dev_estadoDB_dia">fecha</string>
    <string name="dev_estadoDB_recorr">recorrido</string>
    <string name="dev_estadoDB_unsoc">unid.social</string>
    <string name="socv_vistaHaren">Para Haren, las hembras deben ser >1</string>
    <string name="socv_vistaHarenSinAlfa1">Para haren sin alfa, no deben haber machos dominantes</string>
    <string name="socv_vistaHarenSinAlfa2">Para haren sin alfa, no deben haber machos perifericos</string>
    <string name="nav_login_fragment">Login</string>
    <string name="nav_dev_fragment">Para desarrollador</string>
    <string name="nav_about_fragment">Acerca de</string>
    <string name="nav_register_fragment">Registro</string>
</resources>